# research-news

./: .env.example  .gitignore  CHANGELOG.md  README.md  clear_seen.py  mkdocs.yml  pyproject.toml  run_daily.bat  run_daily.ps1  run_daily.sh
.github/workflows/: deploy-pages.yml
config/: authors.yaml  interests.yaml  journals.yaml  sources.yaml
data/: corpus-2026Q2-4i.json  deep_reads_index.json  highlights.json  llm_scores.jsonl  seen_papers.json  token_usage.json
docs/: all_daily.md  all_deep_reads.md  all_journals.md  all_shootout.md  all_weekly.md  index.md  token_usage.md
docs/daily/: 2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-25.md  2026-05-26.md  2026-05-27.md
docs/data/: deep_reads_index.json
docs/deep_reads/: 2026-05-11-2605.08656.md  2026-05-11-2605.09116.md  2026-05-12-2605.09257.md  2026-05-12-2605.09264.md  2026-05-12-2605.09300.md  2026-05-12-2605.09462.md  2026-05-12-2605.09849.md  2026-05-12-2605.10088.md  2026-05-17-10.1214_24-aos2450.md  2026-05-17-10.1214_25-aos2498.md  2026-05-17-10.1214_25-aos2519.md  2026-05-17-10.1214_25-aos2525.md  2026-05-17-10.1214_25-aos2526.md  2026-05-17-10.1214_25-aos2538.md  2026-05-17-10.1214_25-aos2540.md  2026-05-17-10.1214_25-aos2547.md  2026-05-17-10.1214_25-aos2563.md  2026-05-17-10.1214_25-aos2568.md  2026-05-17-10.1214_25-aos2569.md  (+763 more)
research_news/: daily.py  dedup.py  deep_read.py  highlights.py  journals.py  models.py  score_log.py  shootout.py  smoke_test.py  usage.py
(+292 files in other folders)
