[project]
name = "research-news"
version = "0.1.0"
description = "Personalized daily research news for statistics & causal inference"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openai>=1.40",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
    "pypdf>=4.0",
]

[project.optional-dependencies]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
dev = ["ruff>=0.5", "pytest>=8.0"]

[project.scripts]
research-news = "research_news.daily:main"
research-news-journals = "research_news.journals:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["research_news*"]
